# inkless

./: .gitignore  CONTRIBUTING.md  Dockerfile-inkless-broker-demo  INKLESS.md  LICENSE-binary  LICENSE.md  Makefile  README.md  build.gradle  devbox.json  docker-compose-demo.yml  docker-compose.azure.yml  docker-compose.gcs.yml  docker-compose.minio.yml  docker-compose.yml  dump-schema-compose.yml  gradle.properties  localstack.yml  settings.gradle
.github/workflows/: ci.yml  (+5 more)
antithesis/: Makefile  README.md  single-broker-in-memory.yml
antithesis/workload/: Cargo.toml  Dockerfile
antithesis/workload/scripts/: docker-entrypoint.sh
antithesis/workload/src/: config.rs  decisions.rs  lib.rs  rng.rs
antithesis/workload/src/domain/: common.rs  consumer_config.rs  log.rs  mod.rs  producer_config.rs  producer_message.rs  sequence.rs  topic_config.rs  validator.rs
antithesis/workload/src/kafka/: mod.rs  test_admin_client.rs  test_consumer.rs  test_producer.rs
antithesis/workload/src/validation/: application_message_partitioning.rs  consumer_message_ordering.rs  log_validator.rs  message_integrity.rs  mod.rs  producer_idempotence.rs  producer_message_ordering.rs  workload_log.rs
checkstyle/: import-control-core.xml  import-control-group-coordinator.xml  import-control-storage-inkless.xml  import-control-transaction-coordinator.xml  import-control.xml  suppressions.xml
committer-tools/: kafka-merge-pr.py
docker/: docker_build_test.py  requirements.txt
docs/: ops.html  security.html  upgrade.html  zk2kraft.html
gradle/: dependencies.gradle  spotbugs-exclude.xml
(+594 files in other folders)
