[package]
name = "antithesis_kafka_workload"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.36.2", features = ["tracing", "cmake-build"] }
rdkafka-sys = { version = "=4.8.0+2.3.0" }
anyhow = "1.0.86"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "sync", "macros"] }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "json", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = "1.0.206"
serde_json = "1.0.124"
regex = "1.11.0"
chrono = "0.4.38"
antithesis_sdk = "0.2.6"